--- a/segundapagina.html
+++ b/segundapagina.html
@@ -14,6 +14,8 @@
 
 <p>Outra coisa importante. Nem sei como colocar esse site no ar hahahha, preciso estudar um pouco sobre isso, o conhecimento atual que tenho são dos vídeos do professor Guanabara pelo YouTube que já faz mais de 2 anos que assistir, estou escrevendo esse documento também via bloco de notas</p>
 
+<a href="conseguirdeixarmeusiteonline.html">Como conseguir deixar meu site online?</a>
+
 <a href="index.html">Pagina Inicial</a>
     
 </body>
