--- a/conseguirdeixarmeusiteonline.html
+++ b/conseguirdeixarmeusiteonline.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conseguir deixar meu site online</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3LWR8JM2VS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3LWR8JM2VS');
+</script>
 <body>
     <h1>Conseguir deixar meu site online!! 15/11/2025</h1>
 
