--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira pagina do meu site</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3LWR8JM2VS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3LWR8JM2VS');
+</script>
 <h1>Hello world!!!</h1>
 <body>
     <p>Esse site esta sendo construido para documentar meu desenvolvimento na construção de sites e outras habilidades tecnicas como escrever melhor, pensar melhor,  entre outras. aqui documentarei minhas primeiras paginas na web e não terei vergonha de deixar aqui documentado meus primeiros textos e palavras para o mundo.
