--- a/artigos/segundapagina.html
+++ b/artigos/segundapagina.html
@@ -16,13 +16,14 @@
   gtag('config', 'G-3LWR8JM2VS');
 </script>
 <body>
-    <header>
+  <header>
     <h1>Fundo de Pensão</h1>
     <nav>
-      <a href="/index.html">Pagina Inicial</a>
+      <a href="../index.html">Pagina Inicial</a>
       <a href="artigos.html">Artigos</a>
-      <a href="/sobre.html">Sobre o Site</a>
+      <a href="../sobre.html">Sobre o Site </a>
     </nav>
+
   </header>
     <h1>Minha segunda pagina<h1>
 
