--- a/artigos/conseguir-deixar-meu-site-online/index.html
+++ b/artigos/conseguir-deixar-meu-site-online/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conseguir deixar meu site online</title>
      <link rel="stylesheet" href="/style/artigos.css">
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+</style>
+
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LWR8JM2VS"></script>
@@ -26,15 +30,17 @@
 
   </header>
 
-    <article>
-      <h1>Conseguir deixar meu site online!! 15/11/2025</h1>
-      <p>Após pesquisar um pouco sobre como deixar um site online, conseguir colocar ele no ar dia 15/11/2025, olhei novamente alguns videos do professor Guanabara no YouTube, porém achei muito burocratico para o meu momento atual kkk, precisava de velocidade então fiz mais algumas pesquisas e conseguir encontrar uma forma de hospedar no github.com de forma gratuita, olhe na imagem como fiz a pesquisa</p>
-      <img src="imagens/pesquisaparadeixarsiteonline.JPG" alt="Pesquisando no Chat GPT como deixar meu site online">
-      <P>Basicamente o que fiz foi criar uma conta no github e na parte de repositories fazer o upload dos documentos do site, e pronto site esta no ar</P>
-      <p>O mais interressante foi depois que fiz esse processo não chequei se o site tinha ficado online, fui jogar Mobile Legends com os amigos</p>
-      <p>Olha, o ensinamento que tenho dessa experiencia é que a vida é bem mais simples do que pensamos, na realidade somos nós mesmo que colocamos barreiras para fazer o que tem que ser feito.
-      Essa é a terceira pagina original do meu primeiro site online, sem edição.</p>
-    </article>
+    <main>
+      <article>
+        <h1>Conseguir deixar meu site online!! 15/11/2025</h1>
+        <p>Após pesquisar um pouco sobre como deixar um site online, conseguir colocar ele no ar dia 15/11/2025, olhei novamente alguns videos do professor Guanabara no YouTube, porém achei muito burocratico para o meu momento atual kkk, precisava de velocidade então fiz mais algumas pesquisas e conseguir encontrar uma forma de hospedar no github.com de forma gratuita, olhe na imagem como fiz a pesquisa</p>
+        <img src="imagens/pesquisaparadeixarsiteonline.JPG" alt="Pesquisando no Chat GPT como deixar meu site online">
+        <P>Basicamente o que fiz foi criar uma conta no github e na parte de repositories fazer o upload dos documentos do site, e pronto site esta no ar</P>
+        <p>O mais interressante foi depois que fiz esse processo não chequei se o site tinha ficado online, fui jogar Mobile Legends com os amigos</p>
+        <p>Olha, o ensinamento que tenho dessa experiencia é que a vida é bem mais simples do que pensamos, na realidade somos nós mesmo que colocamos barreiras para fazer o que tem que ser feito.
+        Essa é a terceira pagina original do meu primeiro site online, sem edição.</p>
+      </article>
+    </main>
 
 
 
