--- a/artigos/segunda-pagina/index.html
+++ b/artigos/segunda-pagina/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
      <link rel="stylesheet" href="/style/artigos.css">
+     <style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+</style>
+
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LWR8JM2VS"></script>
@@ -26,15 +30,17 @@
 
   </header>
 
-<article>
-  <h1>Minha segunda pagina<h1>
+<main>
+  <article>
+    <h1>Minha segunda pagina<h1>
   
-  <h2>Como vou colocar esse site na internet?</h2>
+    <h2>Como vou colocar esse site na internet?</h2>
   
-  <p>Nesse momento em que escrevo, minha preocupação é como deixar meu site online, pensei em hospedar na Hostiger, porém não quero ter uma despesa dessa agora, fazendo pesquisas na internet vi que existe uma opção de hospedar via GitHub de graça, irei pesquisar mais sobre esse assunto, quando eu conseguir deixar online acredito que irei escrever como fiz na terceira pagina do meu site, deixarei o link dela em algum lugar desse documento</p>
+    <p>Nesse momento em que escrevo, minha preocupação é como deixar meu site online, pensei em hospedar na Hostiger, porém não quero ter uma despesa dessa agora, fazendo pesquisas na internet vi que existe uma opção de hospedar via GitHub de graça, irei pesquisar mais sobre esse assunto, quando eu conseguir deixar online acredito que irei escrever como fiz na terceira pagina do meu site, deixarei o link dela em algum lugar desse documento</p>
   
-  <p>Outra coisa importante. Nem sei como colocar esse site no ar hahahha, preciso estudar um pouco sobre isso, o conhecimento atual que tenho são dos vídeos do professor Guanabara pelo YouTube que já faz mais de 2 anos que assistir, estou escrevendo esse documento também via bloco de notas</p>
-</article>
+    <p>Outra coisa importante. Nem sei como colocar esse site no ar hahahha, preciso estudar um pouco sobre isso, o conhecimento atual que tenho são dos vídeos do professor Guanabara pelo YouTube que já faz mais de 2 anos que assistir, estou escrevendo esse documento também via bloco de notas</p>
+  </article>
+</main>
     
 </body>
 </html>
