--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fundo de Pensão</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/artigos.css">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LWR8JM2VS"></script>
 <script>
@@ -14,6 +14,12 @@
 
   gtag('config', 'G-3LWR8JM2VS');
 </script>
+
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+</style>
+
+
 </head>
 <body>
   <header>
@@ -24,5 +30,23 @@
       <a href="/sobre">Sobre o Site</a>
     </nav>
   </header>
+  <main>
+    <article>
+      <h1>Esse site esta em construção: você gostaria de acompanhar a evolução dele?</h1>
+      <h2>Desenvolvimento pessoal: o motivo da criação desse site.</h2>
+      <p>Esse site esta sendo construido por uma pessoa comum, como você. no momento em que escrevo em 20/11/2025 tenho 30 anos e uma meta muito clara de longo prazo: Chegar aos 40 anos e ser independente financeiramente. A meta não é ter 1 bilão de dolares na conta, a meta é chegar em um momento da vida e conseguir perceber que mesmo que eu não possa mais trabalhar no outro dia, não serei mais dependente do meu esforço fisico ou mental para viver e sobreviver com a qualidade de vida desejada</p>
+      <h2>O que é Independência financeira para mim?</h2>
+      <p>Independência financeira para mim é você ter o controle total sobre o seu tempo, tenho gravado na memoria uma citação do Jorge Paulo Lemman, onde ele fala sobre um encontro com Warren Buffet que ele tira a agenda dele do bolso e mostra para o Jorge os compromissos que tinha na agenda e adivinha quantos compromissos um dos homens mais ricos do mundo tinha? nenhum. Isso mesmo que você acabou de ler, Warren Buffet não tinha nenhum compromisso na agenda dele, isso é liberdade, isso é riqueza.</p>
+      <h2>Como irei conseguir a independência financeira?</h2>
+      <p>Com certeza Através do trabalho, sem enrolação, sem atalhos, apenas trabalho e geração de valor para a sociedade. O motivo do site se chamar Fundo de Pensão não é por conta das previdencias privadas, mas sim uma ideia que através do trabalho hoje, da nossa mentalidade, dos seus comportamentos nós iremos contruir nossos propios fundos de pensão.</p>
+      <h2>Para que serve o site e por que devo seguir?</h2>
+      <p>No inicio o site será usado como um veiculo no meu desenvolvimento pessoal, começando com o mais basico que são a construção de artigos, compartilhar situações do meu caminho da intependência financeira, então se você também esta pecorrendo esse caminho, não fique sozinho, vamos construir juntos um futuro melhor</p>
+      <h2>Visão de longo prazo</h2>
+      <p>e quem sabe um dia, esse site se torne a <strong>maior plataforma de desenvolvimento de pessoas e investimentos do mundo</strong></p>
+    </article>
+
+    <p class="link-para-mais">Convido você para ficar por dentro da evolução, leia mais em <a href="artigos/">Artigos</a></p>
+
+  </main>
 </body>
 </html>
