Atualização de estilo
Atualização de estilo

--- a/artigos/conseguir-deixar-meu-site-online/index.html
+++ b/artigos/conseguir-deixar-meu-site-online/index.html
@@ -33,6 +33,7 @@
     <main>
       <article>
         <h1>Conseguir deixar meu site online!! 15/11/2025</h1>
+                <div class="divisor-estilo"></div>
         <p>Após pesquisar um pouco sobre como deixar um site online, conseguir colocar ele no ar dia 15/11/2025, olhei novamente alguns videos do professor Guanabara no YouTube, porém achei muito burocratico para o meu momento atual kkk, precisava de velocidade então fiz mais algumas pesquisas e conseguir encontrar uma forma de hospedar no github.com de forma gratuita, olhe na imagem como fiz a pesquisa</p>
         <img src="imagens/pesquisaparadeixarsiteonline.JPG" alt="Pesquisando no Chat GPT como deixar meu site online">
         <P>Basicamente o que fiz foi criar uma conta no github e na parte de repositories fazer o upload dos documentos do site, e pronto site esta no ar</P>
