--- a/artigos/segunda-pagina/index.html
+++ b/artigos/segunda-pagina/index.html
@@ -33,7 +33,7 @@
 <main>
   <article>
     <h1>Minha segunda pagina<h1>
-  
+          <div class="divisor-estilo"></div>
     <h2>Como vou colocar esse site na internet?</h2>
   
     <p>Nesse momento em que escrevo, minha preocupação é como deixar meu site online, pensei em hospedar na Hostiger, porém não quero ter uma despesa dessa agora, fazendo pesquisas na internet vi que existe uma opção de hospedar via GitHub de graça, irei pesquisar mais sobre esse assunto, quando eu conseguir deixar online acredito que irei escrever como fiz na terceira pagina do meu site, deixarei o link dela em algum lugar desse documento</p>
