--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <main>
     <article>
       <h1>Esse site esta em construção: você gostaria de acompanhar a evolução dele?</h1>
+              <div class="divisor-estilo"></div>
       <h2>Desenvolvimento pessoal: o motivo da criação desse site.</h2>
       <p>Esse site esta sendo construido por uma pessoa comum, como você. no momento em que escrevo em 20/11/2025 tenho 30 anos e uma meta muito clara de longo prazo: Chegar aos 40 anos e ser independente financeiramente. A meta não é ter 1 bilão de dolares na conta, a meta é chegar em um momento da vida e conseguir perceber que mesmo que eu não possa mais trabalhar no outro dia, não serei mais dependente do meu esforço fisico ou mental para viver e sobreviver com a qualidade de vida desejada</p>
       <h2>O que é Independência financeira para mim?</h2>
