--- a/sobre/index.html
+++ b/sobre/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira pagina do meu site</title>
      <link rel="stylesheet" href="../style/artigos.css">
+     <style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+</style>
+
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LWR8JM2VS"></script>
@@ -28,7 +32,7 @@
   <main>
     <article>
       <h1>Hello world!!!</h1>
-      
+              <div class="divisor-estilo"></div>
       <p>Esse site esta sendo construido para documentar meu desenvolvimento na construção de sites e outras habilidades tecnicas como escrever melhor, pensar melhor,  entre outras. aqui documentarei minhas primeiras paginas na web e não terei vergonha de deixar aqui documentado meus primeiros textos e palavras para o mundo.</p>
 
       <p> Então, aqui você irá encontrar erros na ortografia e alguns textos com baixa compreensão no inicio, porém ao passar do tempo haverá uma melhora significativa na construção do conteúdo, ainda não sei qual será o foco do conteúdo para o site e também não sei onde esse site irá chegar e inspirar pessoas como eu, mesmo com poucos recursos e habilidades iniciantes na contrução web. Hoje no mundo existe muito conhecimento artificial gerado por IA na internet, estarei indo por outro caminho o meu caminho, onde busco desenvolver o meu eu hoje para que no futuro eu seja uma pessoa melhor. Nesse momento estou escrevendo esse texto em um bloco de notas em meu trabalho e assim será o inicio de tudo. esse texto não será revisado e nem editado ele será um documento, um documento que vencerá o tempo e evidenciará a evolução de uma pessoa.</p>
