--- a/artigos/index.html
+++ b/artigos/index.html
@@ -32,11 +32,16 @@
   </header>
 
   <main>
-    <ol class="lista-artigos">
-        <li><a href="assunto-que-mais-ira-aparecer-nesse-site/">Assunto que mais irá aparecer no site</a></li>
-        <li><a href="conseguir-deixar-meu-site-online/">Conseguir deixar meu site online</a></li>
-        <li><a href="segunda-pagina/">Segunda Pagina criada do site</a></li>
-    </ol>
+    
+      <section class="lista-100-primeiros-artigos">
+        <h2>Meus primeiros 100 artigos do meu site</h2>
+                <div class="divisor-estilo"></div>
+          <ol>
+            <li><a href="assunto-que-mais-ira-aparecer-nesse-site/">Assunto que mais irá aparecer no site</a></li>
+            <li><a href="conseguir-deixar-meu-site-online/">Conseguir deixar meu site online</a></li>
+            <li><a href="segunda-pagina/">Segunda Pagina criada do site</a></li>
+          </ol>
+      </section>
   </main>
 
 </body>
