--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>O que é Independência financeira para mim?</h2>
       <p>Independência financeira para mim é você ter o controle total sobre o seu tempo, tenho gravado na memoria uma citação do Jorge Paulo Lemman, onde ele fala sobre um encontro com Warren Buffet que ele tira a agenda dele do bolso e mostra para o Jorge os compromissos que tinha na agenda e adivinha quantos compromissos um dos homens mais ricos do mundo tinha? nenhum. Isso mesmo que você acabou de ler, Warren Buffet não tinha nenhum compromisso na agenda dele, isso é liberdade, isso é riqueza.</p>
       <h2>Como irei conseguir a independência financeira?</h2>
-      <p>Com certeza Através do trabalho, sem enrolação, sem atalhos, apenas trabalho e geração de valor para a sociedade. O motivo do site se chamar Fundo de Pensão não é por conta das previdencias privadas, mas sim uma ideia que através do trabalho hoje, da nossa mentalidade, dos seus comportamentos nós iremos contruir nossos propios fundos de pensão.</p>
+      <p>Com certeza através do trabalho, sem enrolação, sem atalhos, apenas trabalho e geração de valor para a sociedade. O motivo do site se chamar Fundo de Pensão não é por conta das previdencias privadas, mas sim uma ideia que através do trabalho hoje, da nossa mentalidade, dos seus comportamentos nós iremos contruir nossos propios fundos de pensão.</p>
       <h2>Para que serve o site e por que devo seguir?</h2>
       <p>No inicio o site será usado como um veiculo no meu desenvolvimento pessoal, começando com o mais basico que são a construção de artigos, compartilhar situações do meu caminho da intependência financeira, então se você também esta pecorrendo esse caminho, não fique sozinho, vamos construir juntos um futuro melhor</p>
       <h2>Visão de longo prazo</h2>
