--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
       <h2>Para que serve o site e por que devo seguir?</h2>
       <p>No inicio o site será usado como um veiculo no meu desenvolvimento pessoal, irei compartilhar minha evolução no desenvolvimento web e independência financeira. Vou começando com o mais basico que são a construção de artigos, assim consigo compartilhar situações do meu caminho da intependência financeira e evolução como pessoa, então se você também esta pecorrendo esse caminho, não fique sozinho, vamos construir juntos um futuro melhor</p>
       <h2>Visão de longo prazo</h2>
-      <p>e quem sabe um dia, esse site se torne a <strong>maior plataforma de desenvolvimento de pessoas e investimentos do mundo</strong>. Vamos descobri essa resposta com o tempo. Nessa caminhada um triple de principios serão o combustível; fé, constância e paciência</p>
+      <p>e quem sabe um dia, esse site se torne a <strong>maior plataforma de desenvolvimento de pessoas e investimentos do mundo</strong>. Vamos descobri essa resposta com o tempo. Nessa caminhada um triple de principios serão o combustível; fé, constância e paciência.</p>
+
+      <p><strong>Fundo de Pensão</strong></p>
+      <div class="divisor-estilo"></div>
     </article>
 
     <p class="link-para-mais">Convido você para ficar por dentro da evolução, leia mais em <a href="artigos/">Artigos</a></p>
