--- a/artigos/index.html
+++ b/artigos/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fundo de Pensão</title>
   <link rel="stylesheet" href="../style/artigos.css">
-  
+    <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
+
   <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 </style>
@@ -37,7 +38,6 @@
         <h2>Meus primeiros 100 artigos do meu site</h2>
                 <div class="divisor-estilo"></div>
           <ol>
-            <li><a href="produtividade/">Um susto com minha produtividade</a></li>
             <li><a href="assunto-que-mais-ira-aparecer-nesse-site/">Assunto que mais irá aparecer no site</a></li>
             <li><a href="conseguir-deixar-meu-site-online/">Conseguir deixar meu site online</a></li>
             <li><a href="segunda-pagina/">Segunda Pagina criada do site</a></li>
