--- a/artigos/segunda-pagina/index.html
+++ b/artigos/segunda-pagina/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha segunda pagina</title>
+    <title>Document</title>
      <link rel="stylesheet" href="/style/artigos.css">
-     <!-- Google tag (gtag.js) -->
+       <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
+
+     <style>
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+</style>
+
+</head>
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LWR8JM2VS"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -14,14 +21,6 @@
 
   gtag('config', 'G-3LWR8JM2VS');
 </script>
-
-     <style>
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-</style>
-
-</head>
-
-
 <body>
   <header>
     <h1>Fundo de Pensão</h1>
