--- a/sobre/index.html
+++ b/sobre/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira pagina do meu site</title>
      <link rel="stylesheet" href="../style/artigos.css">
+     <link rel="shortcut icon" href="/icon/favicon.ico" type="image/x-icon">
      <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 </style>
