--- a/artigos/index.html
+++ b/artigos/index.html
@@ -26,10 +26,10 @@
     <h1>Fundo de Pensão</h1>
     <nav>
       <a href="/">Pagina Inicial</a>
-      <a href="/artigos">Artigos</a>
-      <a href="../sobre">Sobre o Site </a>
+      <a href="/artigos/">Artigos</a>
+      <a href="/sobre">Sobre o Site</a>
+      <a href="/fundo/">Fundo</a>
     </nav>
-
   </header>
 
   <main>
