--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
 </head>
 <body>
-  <header>
+      <header>
     <h1>Fundo de Pensão</h1>
     <nav>
       <a href="/">Pagina Inicial</a>
       <a href="artigos/">Artigos</a>
       <a href="/sobre">Sobre o Site</a>
+      <a href="fundo/">Fundo</a>
     </nav>
   </header>
   <main>
