--- a/sobre/index.html
+++ b/sobre/index.html
@@ -26,7 +26,8 @@
     <nav>
       <a href="/">Pagina Inicial</a>
       <a href="/artigos/">Artigos</a>
-      <a href="/sobre/">Sobre o Site</a>
+      <a href="/sobre">Sobre o Site</a>
+      <a href="/fundo/">Fundo</a>
     </nav>
   </header>
 
