--- a/dolar-hoje/index.html
+++ b/dolar-hoje/index.html
@@ -33,7 +33,7 @@
 
     <h1>Dolar hoje | Fonte Banco Central do Brasil</h1>
     <p id="preco-dolar-hoje">carregando...</p>
-    <script src="api-dolar-hoje.js"></script>
+    <script src="/json/api-dolar-hoje.js"></script>
 
 </body>
 </html>
